[package]
name = "deep_abyss"
version = "0.2.2"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.22.1"
bevy_egui = "0.24.0"
bevy_ecs_ldtk = "0.9.0"
bevy_ecs_tilemap = "0.12.0"
rand = "0.8.5"
bevy = { version = "0.12.1", features = ["file_watcher"] }
bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", rev = "36e0d82" }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
