[package]
name = "deep_abyss"
version = "0.2.2"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.23"
bevy_egui = "0.26"
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git" }
rand = "0.8.5"
bevy = { version = "0.13", features = ["file_watcher"] }
bevy_dylib = "0.13"
bevy_xpbd_2d = "0.4"

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
