[package]
name = "deep_abyss"
version = "0.8.0"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.28"
bevy_ecs_ldtk = "0.11"
rand = "0.8"
bevy = { version = "0.15", features = ["file_watcher"] }
avian2d = "0.2"
bevy_asset_loader = "0.22"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
